fixed overflow css userBlockprobe

--- a/src/user-session/UserSession.css
+++ b/src/user-session/UserSession.css
@@ -39,8 +39,9 @@
 
 .blockprobe-list-container{
     width:100%; 
-    height:inherit; 
+    height:100%; 
     overflow-y:scroll !important;
+    overflow-x: hidden !important;
 }
 
 .spacer {
